[workspace]
members = [
	"bee-api/bee-rest-api",
	"bee-common/bee-common",
	"bee-common/bee-common-derive",
	"bee-crypto",
	"bee-ledger",
	"bee-message",
    "bee-metrics",
	"bee-network/bee-autopeering",
	"bee-network/bee-gossip",
	"bee-node/bee-node",
	"bee-node/bee-plugin/bee-plugin",
	"bee-node/bee-plugin/bee-plugin-dashboard",
	"bee-node/bee-plugin/bee-plugin-mps",
	"bee-node/bee-plugin/bee-plugin-version-checker",
	"bee-pow",
	"bee-protocol",
	"bee-runtime",
	"bee-signing",
	"bee-storage/bee-storage",
	"bee-storage/bee-storage-memory",
	"bee-storage/bee-storage-null",
	"bee-storage/bee-storage-rocksdb",
	"bee-storage/bee-storage-sled",
	"bee-storage/bee-storage-test",
	"bee-tangle",
	"bee-ternary",
	"bee-test",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
panic = "abort"
strip = "symbols"
