[package]
name = "bee-autopeering"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "Automatic peering."
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "bee", "framework", "autopeering", "libp2p"]
homepage = "https://www.iota.org"

[dependencies]
async-trait = "0.1.51"
base64 = "0.13.0"
bs58 = { version = "0.4", default-features = false, features = [ "alloc" ] }
bytes = { version = "1.0", default-features = false }
iota-crypto = { version = "0.7.0", default-features = false, features = [ "ed25519", "random", "sha" ] }
libp2p-core = { version = "0.29" }
log = { version = "0.4" }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
prost = { version = "0.8", default-features = false }
rand = "0.8.4"
ring = "0.16.20"
serde = { version = "1.0", features = [ "derive" ] }
sled = "0.34.7"
thiserror = "1.0.29"
tokio = { version = "1.11", features = [ "macros", "rt", "time", "net" ] }
tokio-stream = { version = "0.1" }

[build-dependencies]
prost-build = { version = "0.8", default-features = false }
