[package]
name = "bee-common-derive"
version = "1.0.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "Derive macros for the bee-common crate"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "common"]
homepage = "https://www.iota.org"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/lib.rs"

[package.metadata.cargo-udeps.ignore]
development = ["bee-common"]

[dev-dependencies]
bee-common = { path = "../bee-common" }

trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
