[package]
name = "bee-core"
version = "0.1.0"
authors = ["IOTA Foundation"]
edition = "2018"

[dependencies]
tokio = { version = "0.1.22", features = ["rt-full"] }
log = "0.4.7"
stream-cancel = "0.4.4"
tokio-signal = "0.2.7"
bus = "2.2.2"
crossbeam-channel = "0.3.8"
uuid = { version = "0.7.4", features = ["v4" ] }
parking_lot = { version = "0.8.0", optional = true }
futures = "0.1.28"