[package]
name = "bee-crypto"
version = "0.2.1-alpha"
authors = [ "IOTA Stiftung" ]
edition = "2018"
description = "Cryptographic primitives of the IOTA protocol"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "crypto" ]
homepage = "https://www.iota.org"

[dependencies]
bee-ternary = { version = "0.5.0", path = "../bee-ternary" }

byteorder = "1.4.3"
lazy_static = "1.4.0"
thiserror = "1.0.30"
tiny-keccak = { version = "2.0.2", features = [ "keccak" ] }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "raw_speed"
harness = false
