[package]
name = "bee-crypto"
version = "0.3.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Cryptographic primitives of the IOTA protocol"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "crypto" ]
homepage = "https://www.iota.org"

[dependencies]
bee-ternary = { version = "0.5.2", path = "../bee-ternary", default-features = false }

iota-crypto = { version = "0.9.1", default-features = false, features = [ "curl-p" ] }
byteorder = {version = "1.4.3", default-features = false }
lazy_static = {version = "1.4.0", default-features = false }
thiserror = {version = "1.0.30", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false, features = [ "keccak" ] }

[dev-dependencies]
criterion = { version = "0.3.5", default-features = false }

[[bench]]
name = "raw_speed"
harness = false
