[package]
name = "bee-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519 = { version = "1.3.0", default-features = false, features = [ "alloc", "pkcs8" ] }
hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
libp2p-core = { version = "0.30.0", default-features = false }
pkcs8 = { version = "0.8.0", default-features = false, features = [ "alloc", "pem", "std" ] }
thiserror = { version = "1.0.30", default-features = false }
