[package]
name = "bee-identity"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Creation and persistence of local node identities."
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "bee", "framework", "node", "identity" ]
homepage = "https://www.iota.org"

[dependencies]
ed25519 = { version = "1.3.0", default-features = false, features = [ "alloc", "pkcs8" ] }
hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
libp2p-core = { version = "0.30.0", default-features = false }
log = { version = "0.4.14", default-features = false }
pkcs8 = { version = "0.8.0", default-features = false, features = [ "alloc", "pem", "std" ] }
thiserror = { version = "1.0.30", default-features = false }
