[package]
name = "bee-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { version = "0.15.0" }
hex = { version = "0.4.3", default-features = false }
sqlx = { version = "0.5", default-features = false, features = [ "macros", "migrate", "offline", "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1", default-features = false, features = ["full"] }

[dev-dependencies]
bee-test = { path = "../bee-test", default-features = false }
