[package]
name = "bee-inx"
version = "1.0.0-beta.4"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Rust bindings for IOTA node extensions (INX)"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "plugin", "node", "inx", "bee" ]
homepage = "https://www.iota.org"

[dependencies]
bee-block = { version = "1.0.0-beta.7", path = "../bee-block", default-features = false, features = [ "inx", "std" ] }

futures = { version = "0.3.21", default-features = false }
inx = { version = "1.0.0-beta.5", default-features = false }
thiserror = { version = "1.0.32", default-features = false }
packable = { version = "0.6.1", default-features = false }

[dev-dependencies]
bee-block = { version = "1.0.0-beta.7", path = "../bee-block", default-features = false, features = [ "inx", "rand", "std" ] }

tokio = { version = "1.20.1", default-features = false, features = [ "macros", "rt-multi-thread" ] }
futures = { version = "0.3", default-features = false }
