[package]
name = "bee-inx"
version = "1.0.0-beta.6"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Rust bindings for IOTA node extensions (INX)"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "inx", "bee", "node", "plugin" ]
homepage = "https://www.iota.org"

[dependencies]
bee-block = { version = "1.0.0", path = "../bee-block", default-features = false, features = [ "inx" ] }

futures = { version = "0.3.21", default-features = false }
inx = { version = "1.0.0-beta.8", default-features = false }
thiserror = { version = "1.0.32", default-features = false }
packable = { version = "0.6.2", default-features = false }

[dev-dependencies]
bee-block = { version = "1.0.0", path = "../bee-block", default-features = false, features = [ "inx", "rand" ] }

tokio = { version = "1.23.1", default-features = false, features = [ "macros", "rt-multi-thread" ] }
