[package]
name = "bee-ledger"
version = "0.5.0"
authors = [ "IOTA Stiftung" ]
edition = "2018"
description = "All types and features required to compute and maintain the ledger state"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "ledger" ]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { version = "0.5.0", path = "../bee-common/bee-common" }
bee-message = { version = "0.1.5", path = "../bee-message" }
bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", optional = true }
bee-storage = { version = "0.9.0", path = "../bee-storage/bee-storage", optional = true }
bee-tangle = { version = "0.2.0", path = "../bee-tangle", optional = true }

async-trait = { version = "0.1.51", optional = true }
digest = { version = "0.9.0", optional = true }
futures = { version = "0.3.17", optional = true }
hashbrown = { version = "0.11.2", optional = true }
hex = { version = "0.4.3", optional = true }
iota-crypto = { version = "0.7.0", features = [ "blake2b" ], optional = true }
log = { version = "0.4.14", optional = true }
ref-cast = { version = "1.0.6", optional = true }
reqwest = { version = "0.11.5", features = [ "stream" ], optional = true }
serde = { version = "1.0.130", features = [ "derive" ], optional = true }
thiserror = { version = "1.0.30" }
tokio = { version = "1.12.0", features = [ "sync", "fs" ], optional = true }
tokio-stream = { version = "0.1.7", optional = true }
url = { version = "2.2.2", optional = true }

[features]
workers = [
  "bee-runtime",
  "bee-storage",
  "bee-tangle",
  "async-trait",
  "digest",
  "futures",
  "hashbrown",
  "hex",
  "iota-crypto",
  "log",
  "ref-cast",
  "reqwest",
  "serde",
  "tokio",
  "tokio-stream",
  "url/serde"
]
