[package]
name = "bee-ledger"
version = "0.7.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "All types and features required to compute and maintain the ledger state"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "ledger" ]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { version = "0.5.0", path = "../bee-common/bee-common", default-features = false }
bee-message = { version = "0.2.0", path = "../bee-message", default-features = false }
bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false, optional = true }
bee-storage = { version = "0.9.0", path = "../bee-storage/bee-storage", default-features = false, optional = true }
bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false, optional = true }

async-trait = { version = "0.1.51", default-features = false, optional = true }
bytes = { version = "1.0.1", default-features = false, optional = true }
digest = { version = "0.9.0", default-features = false, optional = true }
futures = { version = "0.3.17", default-features = false, optional = true }
hashbrown = { version = "0.11.2", default-features = false, optional = true }
hex = { version = "0.4.3", default-features = false, optional = true }
iota-crypto = { version = "0.9.1", default-features = false, features = [ "blake2b" ], optional = true }
log = { version = "0.4.14", default-features = false, optional = true }
ref-cast = { version = "1.0.6", default-features = false, optional = true }
reqwest = { version = "0.11.5", default-features = false, features = [ "default-tls", "stream" ], optional = true }
serde = { version = "1.0.130", default-features = false, features = [ "derive" ], optional = true }
thiserror = { version = "1.0.30", default-features = false }
tokio = { version = "1.12.0", default-features = false, features = [ "sync", "fs" ], optional = true }
tokio-stream = { version = "0.1.7", default-features = false, optional = true }
url = { version = "2.2.2", default-features = false, optional = true }

[features]
workers = [
  "bee-runtime",
  "bee-storage",
  "bee-tangle",
  "async-trait",
  "bytes",
  "digest",
  "futures",
  "hashbrown",
  "hex",
  "iota-crypto",
  "log",
  "ref-cast",
  "reqwest",
  "serde",
  "tokio",
  "tokio-stream",
  "url/serde"
]
