[package]
name = "bee-message"
version = "0.2.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Implementation of the IOTA protocol message layouts"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "framework", "message" ]
homepage = "https://www.iota.org"
rust-version = "1.60"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [ "--cfg", "doc_cfg" ]

[dependencies]
bee-pow = { version = "0.2.0", path = "../bee-pow", default-features = false }
bee-ternary = { version = "0.6.0", default-features = false, features = [ "serde" ] }

bech32 = { version = "0.8.1", default-features = false }
bitflags = { version = "1.3.2", default-features = false }
bytemuck = { version = "1.8.0", default-features = false }
derive_more = { version = "0.99.16", default-features = false, features = [ "from", "as_ref", "deref" ] }
digest = { version = "0.9.0", default-features = false }
hashbrown = { version = "0.12.0", default-features = false, features = [ "ahash", "inline-more" ] }
hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
iota-crypto = { version = "0.9.2", default-features = false, features = [ "ed25519", "blake2b" ] }
iterator-sorted = { version = "0.1.0", default-features = false }
packable = { version = "0.3.1", default-features = false, features = [ "serde", "primitive-types" ] }
prefix-hex = { version = "0.2.0", default-features = false, features = [ "primitive-types1" ] }
primitive-types = { version = "0.10.1", default-features = false, features = [ "serde" ] }
serde = { version = "1.0.130", default-features = false, optional = true }
serde-big-array = { version = "0.3.2", default-features = false, features = [ "const-generics" ], optional = true }
serde_json = { version = "1.0.79", default-features = false, features = [ "alloc" ], optional = true }
thiserror = { version = "1.0.30", default-features = false }

[dev-dependencies]
bee-test = { version = "0.1.0", path = "../bee-test", default-features = false }

num_cpus = { version = "1.13.0", default-features = false }

[features]
dto = [ "serde", "dep:serde_json" ]
serde = [ "dep:serde", "serde-big-array" ]
std = [ ]
