[package]
name = "bee-metrics"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Track metrics using prometheus"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "metrics", "prometheus" ]
homepage = "https://www.iota.org"

[dependencies]
prometheus-client = { version = "0.15.1", default-features = false }
axum = { version = "0.4.8", default-features = false }
parking_lot = { version = "0.12.0", default-features = false }
tokio = { version = "1.17.0", features = ["process"], default-features = false }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["time"], default-features = false }
