[package]
name = "bee-metrics"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Track metrics using prometheus"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "bee", "metrics", "prometheus" ]
homepage = "https://www.iota.org"

[dependencies]
axum = { version = "0.4.8", default-features = false, features = [ "http2" ] }
parking_lot = { version = "0.12.0", default-features = false }
prometheus-client = { version = "0.15.1", default-features = false }
tokio = { version = "1.17.0", default-features = false, features = [ "process" ] }
tokio-stream = { version = "0.1.8", default-features = false, optional = true }
futures-core = { version = "0.3.21", default-features = false, optional = true }
futures = { version = "0.3.21", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.17.0", default-features = false, features = [ "time", "rt-multi-thread", "macros" ] }

[features]
sync = [ "tokio/sync", "dep:tokio-stream", "dep:futures-core", "dep:futures" ]
