[package]
name = "bee-network"
version = "0.2.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = """
Networking functionality and types for nodes and clients participating in the IOTA protocol built on top of `libp2p`.
"""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "bee", "framework", "network", "libp2p"]
homepage = "https://www.iota.org"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
full = [
    "async-trait",
    "bee-runtime",
    "futures",
    "libp2p/dns-tokio",
    "libp2p/identify",
    "libp2p/mplex",
    "libp2p/noise",
    "libp2p/tcp-tokio",
    "libp2p/yamux",
    "log",
    "once_cell",
    "rand",
    "serde",
    "thiserror",
    "tokio",
    "tokio-stream",
]

[dependencies]
bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", optional = true }

async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
libp2p = { version = "0.37", default-features = false, optional = true }
libp2p-core = { version = "0.28" }
log = { version = "0.4", optional = true }
once_cell = { version = "1.7.2", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive" ], optional = true }
thiserror = { version = "1.0", optional = true }
tokio = { version = "1.4", features = ["macros", "rt", "time"], optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
env_logger = "0.8"
fern = "0.6"
hex = "0.4"
serial_test = "0.5"
tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "macros", "signal", "time", "io-std", "io-util"] }
